--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="My up-to-date portfolio created with React showcases my past production projects." />
+    <meta name="title" property="og:title" content="Portfolio" />
+    <meta property="og:type" content="Website" />
     <meta name="image" property="og:image" content="https://i.ibb.co/v1gGJsz/Screenshot1.png" />
+    <meta name="description" property="og:description" content="My up-to-date portfolio created with React showcases my past production projects." />
+    <meta name="author" content="Hustin Kava" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
