--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,6 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="My up-to-date portfolio created with React showcases my past production projects." />
-    <meta name="title" property="og:title" content="Portfolio" />
-    <meta property="og:type" content="Website" />
-    <meta name="image" property="og:image" content="https://i.ibb.co/v1gGJsz/Screenshot1.png" />
-    <meta name="description" property="og:description" content="My up-to-date portfolio created with React showcases my past production projects." />
     <meta name="author" content="Hustin Kava" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -17,7 +11,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
